@@ -1,4 +1,10 @@
 2005-05-09:
+	* src/minikafs.c(realm_of_cell): debug-log failures in the whereis
+	pioctl, stop looking at addresses if we hit 0.0.0.0.
+	* src/minikafs.c(minikafs_5log): if realm_of_cell succeeds, don't
+	clear the realm name (duh).
+
+2005-05-09:
 	* src/minikafs.c: add a wrapper for the ws_cell pioctl.
 	* src/tokens.c,src/afs5log.c: use ws_cell to find the default cell
 	instead of guessing by doing a cell_of_file on /afs
